// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-quotas - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Check/manage Azure quotas and usage across providers. For deployment planning, capacity validation, region selection. WHEN: "check quotas", "service limits", "current usage", "request quota increase", "quota exceeded", "validate capacity", "regional availability", "provisioning limits", "vCPU limit", "how many vCPUs available in my subscription".",
  "extractedKeywords": [
    "across",
    "availability",
    "available",
    "azure",
    "capacity",
    "check",
    "cli",
    "container",
    "cosmos",
    "current",
    "deploy",
    "deployment",
    "entra",
    "exceeded",
    "increase",
    "limit",
    "limits",
    "manage",
    "many",
    "monitor",
    "planning",
    "providers",
    "provisioning",
    "quota",
    "quotas",
    "region",
    "regional",
    "request",
    "selection",
    "service",
    "storage",
    "subscription",
    "usage",
    "validate",
    "validation",
    "vcpu",
    "vcpus",
    "vnet",
    "when",
  ],
  "name": "azure-quotas",
}
`;

exports[`azure-quotas - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "availability",
  "available",
  "azure",
  "capacity",
  "check",
  "cli",
  "container",
  "cosmos",
  "current",
  "deploy",
  "deployment",
  "entra",
  "exceeded",
  "increase",
  "limit",
  "limits",
  "manage",
  "many",
  "monitor",
  "planning",
  "providers",
  "provisioning",
  "quota",
  "quotas",
  "region",
  "regional",
  "request",
  "selection",
  "service",
  "storage",
  "subscription",
  "usage",
  "validate",
  "validation",
  "vcpu",
  "vcpus",
  "vnet",
  "when",
]
`;
